Cargado de proyectos

--- a/src/styles/information.css
+++ b/src/styles/information.css
@@ -1,22 +1,24 @@
 .main-information {
-   height: 100dvh;
+  height: 100dvh;
   width: 100%;
   align-content: center;
   animation: reveal linear both;
   animation-timeline: view();
   animation-range: entry 35% cover 40%;
 }
-.main-information div{
+.main-information div {
   display: grid;
   grid-template-columns: 2fr 3fr;
   padding: 3%;
   margin: 5%;
   align-items: center;
-  background: linear-gradient(145deg, rgba(32, 32, 32, 0.75), rgba(45, 45, 45, 0.75));
-  border-radius: 15px; 
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 
-              0 6px 20px rgba(0, 0, 0, 0.15); 
- 
+  background: linear-gradient(
+    145deg,
+    rgba(32, 32, 32, 0.75),
+    rgba(45, 45, 45, 0.75)
+  );
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.15);
 }
 .author-image {
   width: 40dvh;
@@ -26,29 +28,26 @@
 }
 .information-container {
   display: flex;
+  flex-direction: column;
   align-items: center;
   color: var(--color-text);
   border-radius: 10px;
   font-size: 0.7em;
-
 }
 
-@keyframes reveal{
-  from{
+@keyframes reveal {
+  from {
     opacity: 0;
-   
   }
-  to{
+  to {
     opacity: 1;
-    
   }
 }
-@media only screen and ( max-width: 600px){
-  .main-information div{
+@media only screen and (max-width: 600px) {
+  .main-information div {
     grid-template-columns: 1fr;
   }
-  .author-image{
-  display: none;
+  .author-image {
+    display: none;
   }
 }
-
