--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -1,31 +1,31 @@
-:root {
-  --primary-color: #c0d6df;
-  --secondary-color: #dd6e42;
-  --target-button: #4f6d7a;
-  --shaded-background: #4f6d7af5;
-}
-.title {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  color: white;
-  border-bottom: 2px var(--secondary-color) solid;
-  width: 5%;
-  font-size: 40px;
-  padding: 2px;
-  position: absolute;
-  left: 8%;
-  top: 205%;
-}
-.projects-container {
-  margin: 0 auto;
-  place-content: center;
+.projects {
   height: 100vh;
   display: grid;
-  grid-template-columns: auto auto auto;
-  justify-content: space-evenly;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  margin: auto;
+  gap: 15px;
+  width: 100%;
+  animation: reveal linear both;
+  animation-timeline: view();
+  animation-range: entry 25% cover 40%;
 }
-
-.tilte-proyect {
+.project-card {
+  margin: auto;
+  color: var(--color-text);
+  background: linear-gradient(
+    145deg,
+    rgba(32, 32, 32, 0.75),
+    rgba(45, 45, 45, 0.75)
+  );
+  border-radius: 15px;
+  text-align: center;
+  height: 40dvh;
+  padding: 15px;
+}
+.project-card p {
+  font-size: 0.7em;
+}
+/* .tilte-proyect {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   align-items: center;
@@ -37,17 +37,7 @@
   background-color: var(--secondary-color);
   color: #ffff;
 }
-.card-proyect {
-  background-size: contain;
-  width: 300px;
-  height: 200px;
-  border-radius: 10px;
-  align-items: center;
-  overflow: hidden;
-  perspective: 1000px;
-  box-shadow: 0 0 0 5px var(--secondary-color);
-  transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-}
+
 
 .card-proyect svg {
   width: 48px;
@@ -203,4 +193,4 @@
 
     text-decoration: none;
   }
-}
+} */
