eliminando el CV en formato DOCX y ajustando la estructura y estilos de los componentes Intro, Project y Studies; mejorando la presentación de proyectos y habilidades

--- a/src/styles/information.css
+++ b/src/styles/information.css
@@ -1,7 +1,6 @@
 .main-information {
   height: 100dvh;
-  width: 100%;
-  align-content: center;
+  place-content: center;
   animation: reveal linear both;
   animation-timeline: view();
   animation-range: entry 35% cover 40%;
