--- a/src/styles/studies.css
+++ b/src/styles/studies.css
@@ -33,6 +33,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   place-items: center;
+  margin-bottom: 50px;
   gap: 15px;
 }
 .certificates-studies {
