--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -39,15 +39,71 @@
   width: 35dvh;
   padding: 15px;
 }
-.right {
-  display: none;
-}
-.left {
-  display: none;
-}
+
+/* parte movil */
 
 .main-projects-movil {
-  display: none;
+  place-content: center;
+  display: grid;
+  grid-template-columns: 1fr 8fr 1fr;
+  grid-template-rows: 80vh 20vh;
+}
+.projects-movil {
+  color: var(--color-text);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  place-items: center;
+  animation: reveal linear both;
+  animation-timeline: view();
+  animation-range: entry 25% cover 40%;
+}
+.projects-movil h2 {
+  position: absolute;
+  z-index: 3;
+}
+
+.project-card-movil {
+  background-color: cadetblue;
+  z-index: 4;
+}
+.project-card-movil h3 {
+  position: absolute;
+  z-index: 3;
+  margin-top: 20%;
+  width: 100%;
+  left: 0;
+  justify-content: center;
+  display: flex;
+}
+.projects-movil img {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.15);
+  filter: brightness(0.4);
+  max-width: 100%;
+  position: relative;
+  z-index: 0;
+}
+.project-link {
+  grid-column: span 3 / span 3;
+  grid-row: span 1 / span 1;
+  z-index: 3;
+  text-align: center;
+  width: 100%;
+}
+.project-link a {
+  margin: 20px;
+}
+.right {
+  place-content: center;
+  cursor: pointer;
+  position: relative;
+  z-index: 3;
+}
+.left {
+  cursor: pointer;
+  position: relative;
+  z-index: 3;
+  place-content: center;
 }
 @media only screen and (max-width: 600px) {
   .main-project {
@@ -68,7 +124,6 @@
     color: var(--color-text);
     display: flex;
     flex-direction: column;
-
     place-items: center;
   }
   .project {
