Eliminar el componente Project y reemplazarlo por ProjectMovil; actualizar estilos y agregar nuevos íconos para los proyectos

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 :root {
   --background-color-page: #dcdbdb;
   --color-primary: #3877ff;
-  --color-text: #dcdcdc;
+  --color-text: #e4e1e1;
 }
 * {
   font-family: "Poppins", sans-serif;
