--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -1,7 +1,7 @@
 .main-projects {
   display: grid;
   grid-template-columns: 1fr 8fr 1fr;
-  height: 100dvh;
+  height: 100vh;
   align-items: center;
   justify-items: center;
 }
@@ -80,49 +80,65 @@
   z-index: 3;
   place-content: center;
 }
+.project-image-movil {
+  display: none;
+}
 @media only screen and (max-width: 600px) {
-  .main-project {
-    width: 0;
+  .main-projects {
+    height: auto;
   }
-  .main-projects-movil {
-    display: grid;
-    grid-template-columns: 1fr 8fr 1fr;
-    height: 50%;
+  .projects {
+    background: none;
+    box-shadow: none;
   }
-  .projects-movil {
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.15);
+  .project-content {
+    text-align-last: center;
     background: linear-gradient(
       145deg,
       rgba(32, 32, 32, 0.75),
       rgba(45, 45, 45, 0.75)
     );
-    color: var(--color-text);
-    display: flex;
-    flex-direction: column;
-    place-items: center;
+    height: 68vh;
+    width: 100%;
+    margin: auto;
+    place-content: center;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.15);
+    padding-bottom: 15px;
+    z-index: 0;
   }
-  .project {
+  .project-content strong {
+    position: relative;
+    color: white;
+    top: -5px;
+  }
+  .projects h2 {
+    color: black;
+  }
+  .project-card {
+    display: flex;
+    border-radius: 15px;
+    width: 100%;
+    justify-content: center;
+  }
+  .project-image-movil {
+    width: 36vh;
+    position: relative;
+    z-index: 1;
+    height: 63vh;
+    border-radius: 8px;
+    display: inline;
+    object-fit: cover;
+  }
+  .project-image {
     display: none;
   }
-  .project-card-movil {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
   .project-link {
-    display: flex;
-    gap: 50px;
   }
-  .right {
+  .right .left {
     place-content: center;
     cursor: pointer;
     position: relative;
     z-index: 1000;
-  }
-  .left {
-    cursor: pointer;
-    position: relative;
-    z-index: 1000;
-    place-content: center;
   }
 }
