--- a/src/styles/intro.css
+++ b/src/styles/intro.css
@@ -4,7 +4,7 @@
   justify-content: center;
   overflow: hidden;
   height: 100dvh;
-  height: 100vh; /* fallback para navegadores antiguos */
+  height: 100vh;
 }
 .photo {
   position: fixed;
@@ -172,7 +172,7 @@ a {
   }
   hr {
     display: inline;
-    width: 20%;
+    width: 25%;
     margin: 0;
     height: 1px;
     border: none;
@@ -183,7 +183,7 @@ a {
   }
   .text-intro strong {
     width: 100%;
-    font-size: 16px;
+    font-size: 24px;
     margin: 0;
   }
 
