--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -11,31 +11,34 @@
   flex-direction: column;
   justify-content: center;
   place-items: center;
-  gap: 1rem;
   width: 100%;
-  border-radius: 15px;
   grid-row: span 1 / span 1;
+}
+.project-content {
+  border-radius: 15px;
+  padding: 3vh;
   background: linear-gradient(
     145deg,
     rgba(32, 32, 32, 0.75),
     rgba(45, 45, 45, 0.75)
   );
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.15);
+  animation: reveal linear both;
+  animation-timeline: view();
+  animation-range: entry 25% cover 40%;
 }
 .projects h2 {
   position: relative;
+  color: black;
 }
 
 .project-card {
   position: relative;
   width: 100%;
-  max-width: 600px;
+  max-width: 800px;
   height: auto;
   z-index: 4;
   text-align: center;
-  animation: reveal linear both;
-  animation-timeline: view();
-  animation-range: entry 25% cover 40%;
 }
 .project-card h3 {
   position: absolute;
@@ -51,9 +54,8 @@
   filter: brightness(0.4);
   width: 100%;
   position: relative;
-  z-index: 0;
   height: auto;
-  border-radius: 8px;
+  border-radius: 15px;
 }
 .project-link {
   grid-column: span 3 / span 3;
@@ -61,26 +63,29 @@
   z-index: 3;
   text-align: center;
   width: 100%;
+  margin-top: 1em;
+  height: 70px;
+}
+.project-link a {
+  margin: 25px;
 }
 .project-icon {
   width: 40px;
 }
-.project-link a {
-  margin: 20px;
-}
-.right {
-  place-content: center;
-  cursor: pointer;
-  position: relative;
-  z-index: 3;
-}
+.right,
 .left {
+  place-content: center;
   cursor: pointer;
   position: relative;
   z-index: 3;
-  place-content: center;
+  font-size: 50px;
+  height: 65%;
 }
+
 .project-image-movil {
+  display: none;
+}
+.project-content strong {
   display: none;
 }
 @media only screen and (max-width: 600px) {
@@ -98,19 +103,19 @@
       rgba(32, 32, 32, 0.75),
       rgba(45, 45, 45, 0.75)
     );
-    height: 68vh;
-    width: 100%;
     margin: auto;
     place-content: center;
     border-radius: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.15);
-    padding-bottom: 15px;
-    z-index: 0;
+    padding: 7px;
+    z-index: 1;
   }
   .project-content strong {
+    display: inline;
     position: relative;
+
     color: white;
-    top: -5px;
+    top: -11px;
   }
   .projects h2 {
     color: black;
@@ -119,7 +124,6 @@
     display: flex;
     border-radius: 15px;
     width: 100%;
-    justify-content: center;
   }
   .project-image-movil {
     width: 36vh;
@@ -133,12 +137,22 @@
   .project-image {
     display: none;
   }
-  .project-link {
-  }
-  .right .left {
+
+  .right,
+  .left {
     place-content: center;
     cursor: pointer;
     position: relative;
     z-index: 1000;
+    font-size: 30px;
+  }
+
+  .project-link {
+    width: 100%;
+    border: none;
+    height: auto;
+  }
+  .project-link a {
+    margin: 25px;
   }
 }
