--- a/src/styles/information.css
+++ b/src/styles/information.css
@@ -1,9 +1,10 @@
 .main-information {
-  height: 100dvh;
+  height: 100vh;
   place-content: center;
   animation: reveal linear both;
   animation-timeline: view();
   animation-range: entry 35% cover 40%;
+  z-index: 3;
 }
 .main-information div {
   display: grid;
@@ -13,25 +14,27 @@
   align-items: center;
   background: linear-gradient(
     145deg,
-    rgba(32, 32, 32, 0.75),
-    rgba(45, 45, 45, 0.75)
+    rgba(110, 110, 110, 0.75),
+    rgba(128, 128, 128, 0.75)
   );
   border-radius: 15px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 4px 8px rgba(184, 184, 184, 0.2),
+    0 6px 20px rgba(189, 189, 189, 0.15);
+  z-index: 3;
 }
 .author-image {
-  width: 40dvh;
+  width: 40vh;
   height: 60dvh;
   object-fit: cover;
   border-radius: 10px;
+  z-index: 3;
 }
 .information-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   color: var(--color-text);
-  border-radius: 10px;
-  font-size: 0.7em;
+  font-size: 0.9em;
 }
 
 @keyframes reveal {
@@ -46,8 +49,19 @@
 @media only screen and (max-width: 600px) {
   .main-information div {
     grid-template-columns: 1fr;
+    z-index: 2;
   }
   .author-image {
-    display: none;
+    height: 63.5vh;
+    z-index: 1;
+    display: flex;
+    position: absolute;
+    filter: brightness(0.3);
+  }
+  .information-card {
+  }
+  .information-container {
+    z-index: 2;
+    font-size: 0.7em;
   }
 }
