--- a/src/styles/studies.css
+++ b/src/styles/studies.css
@@ -10,8 +10,8 @@
 .studies {
   background: linear-gradient(
     145deg,
-    rgba(32, 32, 32, 0.75),
-    rgba(45, 45, 45, 0.75)
+    rgba(110, 110, 110, 0.75),
+    rgba(128, 128, 128, 0.75)
   );
   display: flex;
   flex-direction: column;
@@ -20,7 +20,8 @@
   padding: 3%;
   margin: 5%;
   border-radius: 15px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 4px 8px rgba(119, 119, 119, 0.2),
+    0 6px 20px rgba(143, 143, 143, 0.15);
 }
 
 .studies p {
