--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -9,9 +9,9 @@
   color: var(--color-text);
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  place-items: center;
+  height: 100%;
   width: 100%;
+  place-content: center;
   grid-row: span 1 / span 1;
 }
 .project-content {
@@ -26,7 +26,9 @@
     0 6px 20px rgba(189, 189, 189, 0.15);
   animation: reveal linear both;
   animation-timeline: view();
-  animation-range: entry 25% cover 40%;
+  animation-range: entry 50% cover 90%;
+  width: 80%;
+  margin: auto;
 }
 .projects h2 {
   position: relative;
@@ -38,8 +40,8 @@
   width: 100%;
   max-width: 800px;
   height: auto;
+  margin: auto;
   z-index: 4;
-  text-align: center;
 }
 .project-card h3 {
   position: absolute;
@@ -83,6 +85,8 @@
   z-index: 3;
   font-size: 50px;
   height: 65%;
+
+  place-content: center;
   color: var(--color-text);
 }
 
@@ -90,7 +94,7 @@
   display: none;
 }
 .project-content strong {
-  display: none;
+  text-align: center;
 }
 @media only screen and (max-width: 600px) {
   .main-projects {
@@ -102,35 +106,28 @@
   }
   .project-content {
     text-align-last: center;
-    background: linear-gradient(
-      145deg,
-      rgba(110, 110, 110, 0.75),
-      rgba(128, 128, 128, 0.75)
-    );
     margin: auto;
     place-content: center;
     border-radius: 15px;
     padding: 7px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.15);
     z-index: 1;
+    width: 90%;
   }
   .project-content strong {
     display: inline;
     position: relative;
-    color: white;
-    top: -11px;
+    color: var(--color-text);
   }
-  .projects h2 {
-    color: black;
-    background-color: var(--color-text);
-  }
+
   .project-card {
     display: flex;
     border-radius: 15px;
     width: 100%;
+
+    place-content: center;
   }
   .project-image-movil {
-    width: 36vh;
+    width: 34vh;
     position: relative;
     z-index: 1;
     height: 63vh;
