--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,268 +1,31 @@
-:root {
-  --primary-color: #c0d6df;
-  --secondary-color: #dd6e42;
-  --target-button: #4f6d7a;
-  --title-color: #020202;
-}
-
-.content-conctact {
+.contact {
   height: 100vh;
-}
-.title-contact {
-  display: grid;
-  margin-top: 2%;
-  font-size: 40px;
   color: white;
-  border-bottom: 2px var(--secondary-color) solid;
-  width: 5%;
-  padding: 2px;
+  z-index: 4;
+  position: relative;
+  place-content: center;
+  text-align: center;
 }
-.content-conctact-text {
-  width: 85%;
+.contact-form {
+  background: linear-gradient(
+    145deg,
+    rgba(110, 110, 110, 0.75),
+    rgba(128, 128, 128, 0.75)
+  );
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(184, 184, 184, 0.2),
+    0 6px 20px rgba(189, 189, 189, 0.15);
+  width: 50%;
   margin: auto;
 }
-
-.text-descriptions-contact {
-  color: white;
-  font-size: 1.3em;
-  text-align: center;
-  margin-top: 3%;
-  width: 100%;
-}
-.text-descriptions-contact-title {
-  color: var(--secondary-color);
-}
-.card-icon-contact {
+.contact-form form {
   display: flex;
-  margin-top: 10%;
-  place-content: center;
-  gap: 10vh;
-  height: 35vh;
+  flex-direction: column;
+  gap: 20px;
+  padding: 5%;
 }
 
-.card-icon-contact svg {
-  position: absolute;
-  width: 75%;
-  height: 75%;
-  font-weight: 700;
-  opacity: 1;
-  transition: opacity 0.25s;
-  z-index: 2;
-  cursor: pointer;
-}
-.name-contact-social {
-  margin-top: 22vh;
-}
-.social-link1 {
-  height: 15vh;
-  width: 15vh;
-}
-.social-link3 {
-  height: 15vh;
-  width: 15vh;
-}
-.social-link2 {
-  height: 15vh;
-  width: 15vh;
-}
-.social-link4 {
-  height: 15vh;
-  width: 15vh;
-}
-.card-icon-contact .social-link1,
-.card-icon-contact .social-link2,
-.card-icon-contact .social-link3,
-.card-icon-contact .social-link4 {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: white;
-  font-size: 24px;
-  text-decoration: none;
-  transition: 0.25s;
-  border-radius: 100px;
-}
-
-.card-icon-contact svg {
-  transform: scale(1);
-}
-
-.card-icon-contact .social-link1:hover {
-  background: #f09433;
-  background: -moz-linear-gradient(
-    45deg,
-    #f09433 0%,
-    #e6683c 25%,
-    #dc2743 50%,
-    #cc2366 75%,
-    #bc1888 100%
-  );
-  background: -webkit-linear-gradient(
-    45deg,
-    #f09433 0%,
-    #e6683c 25%,
-    #dc2743 50%,
-    #cc2366 75%,
-    #bc1888 100%
-  );
-  background: linear-gradient(
-    45deg,
-    #f09433 0%,
-    #e6683c 25%,
-    #dc2743 50%,
-    #cc2366 75%,
-    #bc1888 100%
-  );
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
-  animation: bounce_613 0.4s linear;
-}
-
-.card-icon-contact .social-link2:hover {
-  background-color: #00ccff;
-  animation: bounce_613 0.4s linear;
-}
-
-.card-icon-contact .social-link3:hover {
-  background-color: #5865f2;
-  animation: bounce_613 0.4s linear;
-}
-
-.card-icon-contact .social-link4:hover {
-  background-color: #12a50b;
-  animation: bounce_613 0.4s linear;
-}
-
-@keyframes bounce_613 {
-  40% {
-    transform: scale(1.4);
-  }
-
-  60% {
-    transform: scale(0.8);
-  }
-
-  80% {
-    transform: scale(1.2);
-  }
-
-  100% {
-    transform: scale(1);
-  }
-}
-
-.content-conctact-footer {
-  height: 1.5px;
-  background-color: var(--secondary-color);
-  border: none;
-  margin-top: 17vh;
-}
-.content-conctact-footer-text {
-  color: white;
-  display: flex;
-  gap: 5px;
-  margin-top: 2vh;
-  justify-content: center;
-}
-.content-conctact-footer-text-name {
-  color: var(--secondary-color);
-}
 @media only screen and (max-width: 600px) {
-  .content-conctact {
-    height: 90vh;
-  }
-  .content-conctact-text {
-    width: 97%;
-    margin-left: 0%;
-  }
-  .title-contact {
-    display: grid;
-    margin-top: 20%;
-    border-bottom: none;
-    width: 100%;
-    padding: 2px;
-  }
-  .text-descriptions-contact {
-    padding: 8px;
-    margin-top: 8%;
-  }
-  .card-icon-contact {
-    display: grid;
-    grid-template-columns: auto auto;
-    margin-top: 10vh;
-    gap: 5vh;
-  }
-  .name-contact-social {
-    margin-top: 21vh;
-  }
-  .social-link1 {
-    background: #f09433;
-    background: -moz-linear-gradient(
-      45deg,
-      #f09433 0%,
-      #e6683c 25%,
-      #dc2743 50%,
-      #cc2366 75%,
-      #bc1888 100%
-    );
-    background: -webkit-linear-gradient(
-      45deg,
-      #f09433 0%,
-      #e6683c 25%,
-      #dc2743 50%,
-      #cc2366 75%,
-      #bc1888 100%
-    );
-    background: linear-gradient(
-      45deg,
-      #f09433 0%,
-      #e6683c 25%,
-      #dc2743 50%,
-      #cc2366 75%,
-      #bc1888 100%
-    );
-
-    height: 15vh;
-    width: 15vh;
-  }
-  .social-link3 {
-    background-color: #5865f2;
-    height: 15vh;
-    width: 15vh;
-  }
-  .social-link2 {
-    background-color: #00ccff;
-    height: 15vh;
-    width: 15vh;
-  }
-  .social-link4 {
-    background-color: #12a50b;
-    height: 15vh;
-    width: 15vh;
-  }
-  .card-icon-contact .social-link1,
-  .card-icon-contact .social-link2,
-  .card-icon-contact .social-link3,
-  .card-icon-contact .social-link4 {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    font-size: 24px;
-    text-decoration: none;
-    transition: 0.25s;
-    border-radius: 100px;
-  }
-  .content-conctact-footer {
-    border: none;
-    margin-top: 15vh;
-  }
-  .content-conctact-footer-text {
-    color: white;
-    display: flex;
-    gap: 5px;
-    padding-bottom: 10px;
-    justify-content: center;
+  .conctact {
   }
 }
