Agregar íconos a los campos de nombre y correo en el formulario de contacto; ajustar estilos y mejorar la presentación general.

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Limelight&family=Sora:wght@100..800&display=swap");
 
 :root {
-  --background-color-page: #dcdbdb;
+  --background-color: #dcdbdb;
   --color-primary: #3877ff;
   --color-text: #e4e1e1;
 }
